# ffplayer

./: .gitignore  README.md  ffplayer.spec  pyproject.toml
.github/workflows/: build-release.yml
ffplayer/: __init__.py  __main__.py  config.py  controls.py  ffplay_widget.py  main_window.py  settings_dialog.py  styles.py
